# rusty-streamer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  index.html  loki-config.yaml  otel-collector-config.yaml  package-lock.json  package.json  router.yaml  test.py
Users/: Cargo.toml
Users/api-docs/: openapi.json
Users/migrations/2025-11-09-202631-0000_init/: down.sql  up.sql
Users/src/: README.md  main.rs  schema.rs
Users/src/controllers/: error.rs  mod.rs  pagination.rs  users.rs  watch_history.rs  watch_list.rs  watch_room.rs  watch_room_message.rs  watch_room_participant.rs
Users/src/data/: mod.rs  users.rs  watch_history.rs  watch_list.rs  watch_room.rs  watch_room_message.rs  watch_room_participant.rs
Users/src/models/: mod.rs  user.rs  watch_history.rs  watch_list.rs  watch_room.rs  watch_room_message.rs  watch_room_participant.rs
Users/users-client/: Cargo.toml  README.md
Users/users-client/.openapi-generator/: FILES
Users/users-client/docs/: NewUser.md  NewWatchHistory.md  NewWatchRoom.md  NewWatchRoomMessage.md  NewWatchRoomParticipant.md  NewWatchlist.md  UpdateUser.md  UpdateWatchHistory.md  UpdateWatchRoom.md  User.md  UsersApi.md  WatchHistory.md  WatchHistoryApi.md  WatchRoom.md  WatchRoomMessage.md  WatchRoomMessagesApi.md  WatchRoomParticipant.md  WatchRoomParticipantsApi.md  WatchRoomsApi.md  Watchlist.md  WatchlistApi.md
Users/users-client/src/apis/: configuration.rs  mod.rs  users_api.rs  watch_history_api.rs  watch_room_messages_api.rs  (+3 more)
bff/: Cargo.toml
bff/api-docs/: openapi.json  openapi.yaml
bff/src/: main.rs
bff/src/controllers/: actors.rs  error.rs  mod.rs  movie.rs  reviews.rs
bff/src/controllers/movies/: actors.rs  genre_controller.rs  mod.rs  movies.rs  movies_controller.rs  pagination.rs  people_controller.rs  reviews.rs  reviews_controller.rs  upload_controller.rs
bff/src/controllers/users/: auth.rs  error.rs  mod.rs  pagination.rs  users.rs  users_controller.rs  watch_history.rs  watch_list_controller.rs  watch_room.rs  watch_room_controller.rs  watch_room_messages.rs  watch_room_participants.rs
bff/src/models/: mod.rs  movies.rs  users.rs  wrappers.rs
elasticsearch/: docker-compose.yaml
ffmpeg-worker/: Cargo.toml
ffmpeg-worker/api-docs/: openapi.json
ffmpeg-worker/client/: Cargo.toml  README.md
ffmpeg-worker/client/.openapi-generator/: FILES
ffmpeg-worker/client/docs/: ControllersBlobApi.md
ffmpeg-worker/client/src/apis/: controllers_blob_api.rs
ffmpeg-worker/ffmpeg-client/: Cargo.toml  README.md
ffmpeg-worker/ffmpeg-client/src/apis/: configuration.rs  mod.rs
ffmpeg-worker/src/: log_middleware.rs  main.rs
ffmpeg-worker/src/controllers/: blob.rs
ffmpeg-worker/src/logic/: ffmpeg.rs
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: AuthProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(pages)/: layout.tsx  page.tsx
frontend/app/upload/: GenreCard.tsx  GenresSelector.tsx  PeopleSelector.tsx  azureUpload.ts  page.tsx
frontend/components/: MovieDetail.tsx  PeopleList.tsx  PersonCard.tsx  ReactQueryProvider.tsx  Sidebar.tsx  StarRating.tsx  ToggleTheme.tsx  VideoPlayer.tsx  navUser.tsx
frontend/components/ui/: sidebar.tsx  typo.tsx
frontend/hooks/: useAuth.tsx  useToken.tsx  useTokenExpiration.tsx
frontend/lib/: AuthEvents.ts  utils.ts
frontend/types/: videojs-playlist-ui.d.ts
movies/: Cargo.toml
movies/api-docs/: openapi.json
movies/migrations/2025-11-09-202631-0000_init/: down.sql  up.sql
movies/movies-client/: Cargo.toml  README.md
movies/movies-client/.openapi-generator/: FILES
movies/movies-client/docs/: Actor.md  ActorsApi.md  Genre.md  GenresApi.md  Movie.md  MovieCrew.md  MovieCrewDetail.md  MovieDetail.md  MoviesApi.md  NewActor.md  NewGenre.md  NewMovie.md  NewMovieCrew.md  NewPerson.md  NewReview.md  PeopleApi.md  Person.md  Review.md  ReviewsApi.md
movies/movies-client/src/apis/: actors_api.rs  configuration.rs  genres_api.rs  mod.rs  movies_api.rs  people_api.rs  reviews_api.rs
movies/movies-client/src/models/: actor.rs  genre.rs  mod.rs  movie.rs  movie_crew.rs  movie_crew_detail.rs  movie_detail.rs  new_actor.rs  new_genre.rs  new_movie.rs  new_movie_crew.rs  new_person.rs  new_review.rs  person.rs  review.rs
movies/src/: README.md  dtos.rs  main.rs  schema.rs
movies/src/controllers/: actors.rs  error.rs  genre_controller.rs  mod.rs  movies.rs  movies_controller.rs  people_controller.rs  reviews.rs  reviews_controller.rs
movies/src/controllers/models/: mod.rs
movies/src/controllers/models/genre/: genre.rs  mod.rs  new_genre.rs
movies/src/controllers/models/movie_crew/: mod.rs  movie_crew.rs  movie_crew_detail.rs  new_movie_crew.rs
movies/src/controllers/models/movies/: mod.rs  movie.rs  movie_detail.rs  new_movie.rs  update_movie.rs
movies/src/controllers/models/people/: mod.rs  new_person.rs  person.rs  update_person.rs
movies/src/controllers/models/reviews/: mod.rs  new_review.rs  review.rs  update_review.rs
movies/src/data/: actors.rs  genres.rs  mod.rs  movies.rs  people.rs  reviews.rs
movies/src/data/models/: genre.rs  mod.rs  movie.rs  movie_crew.rs  movie_genres.rs  person.rs  review.rs
movies/src/models/: actor.rs  mod.rs  movie.rs  movie_actor.rs  review.rs
movies/src/services/: genre_service.rs  mod.rs  movie_service.rs  people_service.rs  review_service.rs
movies/src/services/dtos/: mod.rs
movies/src/services/dtos/genre/: genre_dto.rs  mod.rs  new_genre_dto.rs
movies/src/services/dtos/movie/: mod.rs  movie_details_dto.rs  movie_dto.rs  new_movie_dto.rs
movies/src/services/dtos/movie_crew/: mod.rs  movie_crew_detail_dto.rs  movie_crew_dto.rs  new_movie_crew_dto.rs
movies/src/services/dtos/people/: mod.rs  new_person_dto.rs  person_dto.rs
movies/src/services/dtos/review/: mod.rs  new_review_dto.rs  review_dto.rs
shared/: Cargo.toml
shared/src/: http_logging_middleware.rs  lib.rs  log_middleware.rs
src/: controllers.rs  main.rs
src/Controllers/: blob.rs  mod.rs  test.rs
src/logic/: ffmpeg.rs
(+41 files in other folders)
