# [package]
# name = "video"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [
    "ffmpeg-worker", 
    "movies",
    # "user-service"
]


[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7.2"

utoipa = { version = "5", features = ["actix_extras","macros", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "reqwest"] }
utoipa-actix-web = "0.1.2"
utoipa-redoc = { version = "6", features = ["actix-web"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"]}
