
[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-multipart = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-actix-web = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-scalar = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

tokio = { version = "1.48.0", features = ["process"] }

env_logger = "0.11.8"
log = "0.4"

dotenvy = "0.15.7"

anyhow = "1.0.100"
serde = { version = "1.0.188", features = ["derive"] }

shared = { path = "../shared" }
ffmpeg_client = { path = "../ffmpeg-worker/ffmpeg-client" }
movies_client = { path = "../movies/movies-client/" }
users_client = { path = "../users/users-client" }

derive_more = { version = "2.0.1", features = ["full"] }
uuid = "1.18.1"
chrono = { version = "0.4.42", features = ["serde"] }

