
[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-multipart = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-actix-web = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-scalar = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true }

tokio = { version = "1.48.0", features = ["process"] }

env_logger = "0.11.8"
log = "0.4"

dotenvy = "0.15.7"

anyhow = "1.0.100"
serde = { version = "1.0.188", features = ["derive"] }

shared = { path = "../shared" }
ffmpeg_client = { path = "../ffmpeg-worker/ffmpeg-client" }
movies_client = { path = "../movies/movies-client/" }
users_client = { path = "../users/users-client" }

derive_more = { version = "2.0.1", features = ["full"] }
uuid = "1.18.1"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest-tracing = "0.5.8"
reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
opentelemetry-http = "0.31.0"
tracing-opentelemetry = "0.32.0"
async-trait = "0.1.89"
http = "1.3.1"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-cors = "0.7.1"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_core = "0.30.1"
actix-jwt-auth-middleware = "0.5.0"
jwt-compact = { version = "0.8.0" }
actix-state-guards = "0.1.0"

