[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}
actix-multipart = {workspace = true}

utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true} 
utoipa-actix-web = {workspace = true}
utoipa-redoc = {workspace = true}
utoipa-rapidoc = {workspace = true}
utoipa-scalar = {workspace = true}

env_logger = "0.11.8"

dotenvy = "0.15.7"

diesel = { version = "2.2.0", features = ["postgres"] }