[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}
actix-multipart = {workspace = true}

utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true} 
utoipa-actix-web = {workspace = true}
utoipa-redoc = {workspace = true}
utoipa-rapidoc = {workspace = true}
utoipa-scalar = {workspace = true}

opentelemetry = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-otlp = {workspace = true}

tokio = { version = "1.48.0", features = ["process"] }

env_logger = "0.11.8"
log = "0.4"

dotenvy = "0.15.7"

diesel = { version = "2.3.3", features = ["postgres", "chrono", "r2d2", "uuid"] }
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.100"
serde = { version = "1.0.188", features = ["derive"] }

shared = { path = "../shared" }
uuid = "1.18.1"
derive_more = "2.0.1"
diesel-async = { version = "0.7.4", features = ["postgres", "pool", "bb8"] }
bb8 = "0.9.0"
