[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

futures = "0.3.31"
log = "0.4"
async-trait = "0.1.89"
reqwest-middleware = "0.4.2"
http = "1.3.1"
reqwest = "0.12.24"
